# russimp

./: Cargo.toml
.github/workflows/: russimp.yml
src/: mesh.rs  texture.rs
