[package]
name = "russimp"
version = "0.2.4"
authors = ["Jhonny Knaak de Vargas"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/jkvargas/russimp"
categories = ["rendering", "external-ffi-bindings", "game-engines", "multimedia"]
keywords = ["assimp", "3d", "blend", "3ds", "glTF"]
repository = "https://github.com/jkvargas/russimp"
description = "Assimp bindings for rust"
exclude = [ "*.bash", "/models" ]

[lib]
name = "russimp"
path = "src/lib.rs"

[dependencies]
russimp-sys = "0.2.5"
num-derive = "0.3.3"
num-traits = "0.2.14"
num_enum = "0.5.4"
derivative = "2.2.0"
mint = { version = "0.5.6", optional = true }

[build-dependencies]
vcpkg = "0.2.15"

[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
rev = "a241dd2859f92f09f801cda2255a94e7bf8336db"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md", install = ["assimp"] }
x86-pc-windows-msvc = { triplet = "x86-windows-static-md", install = ["assimp"] }